// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t0] route is initialized then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 1.vision (1.vision.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t1] 1.vision artifact is created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   └─ ✗ judge.1 - failed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t2] 1.vision is approved by human then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   └─ stone = 1.vision
      └─ ✓ approved
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t3] 1.vision pass is reattempted after approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   └─ ✓ judge.1 - passed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t4] next stone is requested after 1.vision then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 2.research (2.research.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t5] 2.research pass attempted without artifact then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t6] 2.research artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   └─ stone = 2.research
   └─ passage = allowed (unguarded)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t7] next stone is requested after 2.research then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 3.blueprint (3.blueprint.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8.5] 3.blueprint review.self is promised then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🍂 what is the rush?
   ├─ ...
   │
   ├─ what does haste cost?
   ├─ ...
   │
   ├─ does the self weigh more than the whole?
   │  ├─ what you miss, they must find
   │  ├─ minutes saved, hours spent
   │  └─ your haste, their burden
   │
   ├─ each review is an opportunity
   │  ├─ a chance to find a deeper truth
   │  ├─ not one to squander
   │  └─ no matter how repetitive
   │
   └─ trust the way
      ├─ what calls for pause, calls for cause
      └─ be true to the review 🍵

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  the review is the work.
   │  │  not a gate to pass.
   │  │  not a step to complete.
   │  │  the work itself.
   │  │
   │  │  you are not the author.
   │  │  you are the reviewer.
   │  │
   │  └─
   │
   ├─ trust the way 🪷
   │  ├─
   │  │
   │  │  when you see this prompt
   │  │    pause and articulate what you found
   │  │
   │  │  when you found issues
   │  │    fix them before you continue
   │  │
   │  │  when you found no issues
   │  │    articulate why it holds
   │  │
   │  │  when you cannot articulate either
   │  │    you have not reviewed
   │  │
   │  └─
   │
   ├─ articulate into
   │  └─ ./review/self/3.blueprint.design-complete.md
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ articulate into
   │  └─ ./review/self/3.blueprint.design-complete.md
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8] 3.blueprint artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ articulate into
   │  └─ /review/self/3.blueprint.design-complete.md
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9.5] 3.blueprint review set to pass and pass reattempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ articulate into
   │  └─ /review/self/3.blueprint.design-complete.md
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9] 3.blueprint pass reattempted after promise then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ articulate into
   │  └─ /review/self/3.blueprint.design-complete.md
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t10] 3.blueprint approved and pass reattempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ articulate into
   │  └─ /review/self/3.blueprint.design-complete.md
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t11] next stone is requested after 3.blueprint then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 3.blueprint (3.blueprint.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t12] 5.execute artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - done [TIME]
   └─ ✓ judge.1 - passed [TIME]

🗿 route.stone.set
   ├─ stone = 5.execute
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ weather.ts
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/5.execute.guard.review.i1.e5c031c5923de2dd7ebc77d84ac1c222cfdb9d3143fa8c0bc27ed9d821ce74e3.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t13] next stone is requested after all stones passed then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 3.blueprint (3.blueprint.stone)
"
`;
